src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    FUNCTION_DECLARATION
    RETURN
    SEPARATION

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> expression END_LINE
Rule 5     statement -> assignment END_LINE
Rule 6     statement -> declaration END_LINE
Rule 7     statement -> print_statement END_LINE
Rule 8     statement -> conditional END_LINE
Rule 9     statement -> loop END_LINE
Rule 10    statement -> comment
Rule 11    statement -> error
Rule 12    assignment -> VARIABLE ASSIGNMENT_OP expression
Rule 13    declaration -> type VARIABLE ASSIGNMENT_OP expression
Rule 14    declaration -> type VARIABLE
Rule 15    expression -> binary_expression
Rule 16    expression -> unitary_expression
Rule 17    expression -> primary_expression
Rule 18    binary_expression -> expression PLUS_OP expression
Rule 19    binary_expression -> expression MINUS_OP expression
Rule 20    binary_expression -> expression MUL_OP expression
Rule 21    binary_expression -> expression DIV_OP expression
Rule 22    binary_expression -> expression LESS_OP expression
Rule 23    binary_expression -> expression GREATER_OP expression
Rule 24    binary_expression -> expression LESS_EQUAL_OP expression
Rule 25    binary_expression -> expression GREATER_EQUAL_OP expression
Rule 26    binary_expression -> expression EQUAL_OP expression
Rule 27    binary_expression -> expression DIFFERENT_OP expression
Rule 28    binary_expression -> expression LOGICAL_OP_AND expression
Rule 29    binary_expression -> expression LOGICAL_OP_OR expression
Rule 30    unitary_expression -> MINUS_OP expression
Rule 31    unitary_expression -> LOGICAL_OP_NOT expression
Rule 32    primary_expression -> VARIABLE
Rule 33    primary_expression -> NUMBER_INTEGER
Rule 34    primary_expression -> NUMBER_FLOAT
Rule 35    primary_expression -> TRUE
Rule 36    primary_expression -> FALSE
Rule 37    primary_expression -> NULL
Rule 38    primary_expression -> TEXT_CHAR
Rule 39    primary_expression -> TEXT_STRING
Rule 40    print_statement -> PRINT_DECLARATION LPAREN expression RPAREN
Rule 41    comment -> COMMENT
Rule 42    empty -> <empty>
Rule 43    type -> TYPE_INTEGER
Rule 44    type -> TYPE_FLOAT
Rule 45    type -> TYPE_BOOLEAN
Rule 46    type -> TYPE_CHAR
Rule 47    type -> TYPE_STRING
Rule 48    conditional -> CONDITIONAL1 LPAREN expression RPAREN STRUCTURE_BODY statement_list CONDITIONAL2 STRUCTURE_BODY statement_list
Rule 49    conditional -> CONDITIONAL1 LPAREN expression RPAREN STRUCTURE_BODY statement_list
Rule 50    loop -> LOOP STRUCTURE_BODY statement_list UNTIL LPAREN expression RPAREN

Terminals, with rules where they appear

ASSIGNMENT_OP        : 12 13
BREAK                : 
COMMENT              : 41
CONDITIONAL1         : 48 49
CONDITIONAL2         : 48
DIFFERENT_OP         : 27
DIV_OP               : 21
END_LINE             : 4 5 6 7 8 9
EQUAL_OP             : 26
FALSE                : 36
FUNCTION_DECLARATION : 
GREATER_EQUAL_OP     : 25
GREATER_OP           : 23
LESS_EQUAL_OP        : 24
LESS_OP              : 22
LOGICAL_OP_AND       : 28
LOGICAL_OP_NOT       : 31
LOGICAL_OP_OR        : 29
LOOP                 : 50
LPAREN               : 40 48 49 50
MINUS_OP             : 19 30
MUL_OP               : 20
NULL                 : 37
NUMBER_FLOAT         : 34
NUMBER_INTEGER       : 33
PLUS_OP              : 18
PRINT_DECLARATION    : 40
RETURN               : 
RPAREN               : 40 48 49 50
SEPARATION           : 
STRUCTURE_BODY       : 48 48 49 50
TEXT_CHAR            : 38
TEXT_STRING          : 39
TRUE                 : 35
TYPE_BOOLEAN         : 45
TYPE_CHAR            : 46
TYPE_FLOAT           : 44
TYPE_INTEGER         : 43
TYPE_STRING          : 47
UNTIL                : 50
VARIABLE             : 12 13 14 32
error                : 11

Nonterminals, with rules where they appear

assignment           : 5
binary_expression    : 15
comment              : 10
conditional          : 8
declaration          : 6
empty                : 
expression           : 4 12 13 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 31 40 48 49 50
loop                 : 9
primary_expression   : 17
print_statement      : 7
program              : 0
statement            : 2 3
statement_list       : 1 2 48 48 49 50
type                 : 13 14
unitary_expression   : 16

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . expression END_LINE
    (5) statement -> . assignment END_LINE
    (6) statement -> . declaration END_LINE
    (7) statement -> . print_statement END_LINE
    (8) statement -> . conditional END_LINE
    (9) statement -> . loop END_LINE
    (10) statement -> . comment
    (11) statement -> . error
    (15) expression -> . binary_expression
    (16) expression -> . unitary_expression
    (17) expression -> . primary_expression
    (12) assignment -> . VARIABLE ASSIGNMENT_OP expression
    (13) declaration -> . type VARIABLE ASSIGNMENT_OP expression
    (14) declaration -> . type VARIABLE
    (40) print_statement -> . PRINT_DECLARATION LPAREN expression RPAREN
    (48) conditional -> . CONDITIONAL1 LPAREN expression RPAREN STRUCTURE_BODY statement_list CONDITIONAL2 STRUCTURE_BODY statement_list
    (49) conditional -> . CONDITIONAL1 LPAREN expression RPAREN STRUCTURE_BODY statement_list
    (50) loop -> . LOOP STRUCTURE_BODY statement_list UNTIL LPAREN expression RPAREN
    (41) comment -> . COMMENT
    (18) binary_expression -> . expression PLUS_OP expression
    (19) binary_expression -> . expression MINUS_OP expression
    (20) binary_expression -> . expression MUL_OP expression
    (21) binary_expression -> . expression DIV_OP expression
    (22) binary_expression -> . expression LESS_OP expression
    (23) binary_expression -> . expression GREATER_OP expression
    (24) binary_expression -> . expression LESS_EQUAL_OP expression
    (25) binary_expression -> . expression GREATER_EQUAL_OP expression
    (26) binary_expression -> . expression EQUAL_OP expression
    (27) binary_expression -> . expression DIFFERENT_OP expression
    (28) binary_expression -> . expression LOGICAL_OP_AND expression
    (29) binary_expression -> . expression LOGICAL_OP_OR expression
    (30) unitary_expression -> . MINUS_OP expression
    (31) unitary_expression -> . LOGICAL_OP_NOT expression
    (32) primary_expression -> . VARIABLE
    (33) primary_expression -> . NUMBER_INTEGER
    (34) primary_expression -> . NUMBER_FLOAT
    (35) primary_expression -> . TRUE
    (36) primary_expression -> . FALSE
    (37) primary_expression -> . NULL
    (38) primary_expression -> . TEXT_CHAR
    (39) primary_expression -> . TEXT_STRING
    (43) type -> . TYPE_INTEGER
    (44) type -> . TYPE_FLOAT
    (45) type -> . TYPE_BOOLEAN
    (46) type -> . TYPE_CHAR
    (47) type -> . TYPE_STRING

    error           shift and go to state 11
    VARIABLE        shift and go to state 15
    PRINT_DECLARATION shift and go to state 17
    CONDITIONAL1    shift and go to state 18
    LOOP            shift and go to state 19
    COMMENT         shift and go to state 20
    MINUS_OP        shift and go to state 21
    LOGICAL_OP_NOT  shift and go to state 22
    NUMBER_INTEGER  shift and go to state 23
    NUMBER_FLOAT    shift and go to state 24
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26
    NULL            shift and go to state 27
    TEXT_CHAR       shift and go to state 28
    TEXT_STRING     shift and go to state 29
    TYPE_INTEGER    shift and go to state 30
    TYPE_FLOAT      shift and go to state 31
    TYPE_BOOLEAN    shift and go to state 32
    TYPE_CHAR       shift and go to state 33
    TYPE_STRING     shift and go to state 34

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 4
    assignment                     shift and go to state 5
    declaration                    shift and go to state 6
    print_statement                shift and go to state 7
    conditional                    shift and go to state 8
    loop                           shift and go to state 9
    comment                        shift and go to state 10
    binary_expression              shift and go to state 12
    unitary_expression             shift and go to state 13
    primary_expression             shift and go to state 14
    type                           shift and go to state 16

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . expression END_LINE
    (5) statement -> . assignment END_LINE
    (6) statement -> . declaration END_LINE
    (7) statement -> . print_statement END_LINE
    (8) statement -> . conditional END_LINE
    (9) statement -> . loop END_LINE
    (10) statement -> . comment
    (11) statement -> . error
    (15) expression -> . binary_expression
    (16) expression -> . unitary_expression
    (17) expression -> . primary_expression
    (12) assignment -> . VARIABLE ASSIGNMENT_OP expression
    (13) declaration -> . type VARIABLE ASSIGNMENT_OP expression
    (14) declaration -> . type VARIABLE
    (40) print_statement -> . PRINT_DECLARATION LPAREN expression RPAREN
    (48) conditional -> . CONDITIONAL1 LPAREN expression RPAREN STRUCTURE_BODY statement_list CONDITIONAL2 STRUCTURE_BODY statement_list
    (49) conditional -> . CONDITIONAL1 LPAREN expression RPAREN STRUCTURE_BODY statement_list
    (50) loop -> . LOOP STRUCTURE_BODY statement_list UNTIL LPAREN expression RPAREN
    (41) comment -> . COMMENT
    (18) binary_expression -> . expression PLUS_OP expression
    (19) binary_expression -> . expression MINUS_OP expression
    (20) binary_expression -> . expression MUL_OP expression
    (21) binary_expression -> . expression DIV_OP expression
    (22) binary_expression -> . expression LESS_OP expression
    (23) binary_expression -> . expression GREATER_OP expression
    (24) binary_expression -> . expression LESS_EQUAL_OP expression
    (25) binary_expression -> . expression GREATER_EQUAL_OP expression
    (26) binary_expression -> . expression EQUAL_OP expression
    (27) binary_expression -> . expression DIFFERENT_OP expression
    (28) binary_expression -> . expression LOGICAL_OP_AND expression
    (29) binary_expression -> . expression LOGICAL_OP_OR expression
    (30) unitary_expression -> . MINUS_OP expression
    (31) unitary_expression -> . LOGICAL_OP_NOT expression
    (32) primary_expression -> . VARIABLE
    (33) primary_expression -> . NUMBER_INTEGER
    (34) primary_expression -> . NUMBER_FLOAT
    (35) primary_expression -> . TRUE
    (36) primary_expression -> . FALSE
    (37) primary_expression -> . NULL
    (38) primary_expression -> . TEXT_CHAR
    (39) primary_expression -> . TEXT_STRING
    (43) type -> . TYPE_INTEGER
    (44) type -> . TYPE_FLOAT
    (45) type -> . TYPE_BOOLEAN
    (46) type -> . TYPE_CHAR
    (47) type -> . TYPE_STRING

    $end            reduce using rule 1 (program -> statement_list .)
    error           shift and go to state 11
    VARIABLE        shift and go to state 15
    PRINT_DECLARATION shift and go to state 17
    CONDITIONAL1    shift and go to state 18
    LOOP            shift and go to state 19
    COMMENT         shift and go to state 20
    MINUS_OP        shift and go to state 21
    LOGICAL_OP_NOT  shift and go to state 22
    NUMBER_INTEGER  shift and go to state 23
    NUMBER_FLOAT    shift and go to state 24
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26
    NULL            shift and go to state 27
    TEXT_CHAR       shift and go to state 28
    TEXT_STRING     shift and go to state 29
    TYPE_INTEGER    shift and go to state 30
    TYPE_FLOAT      shift and go to state 31
    TYPE_BOOLEAN    shift and go to state 32
    TYPE_CHAR       shift and go to state 33
    TYPE_STRING     shift and go to state 34

    statement                      shift and go to state 35
    expression                     shift and go to state 4
    assignment                     shift and go to state 5
    declaration                    shift and go to state 6
    print_statement                shift and go to state 7
    conditional                    shift and go to state 8
    loop                           shift and go to state 9
    comment                        shift and go to state 10
    binary_expression              shift and go to state 12
    unitary_expression             shift and go to state 13
    primary_expression             shift and go to state 14
    type                           shift and go to state 16

state 3

    (3) statement_list -> statement .

    error           reduce using rule 3 (statement_list -> statement .)
    VARIABLE        reduce using rule 3 (statement_list -> statement .)
    PRINT_DECLARATION reduce using rule 3 (statement_list -> statement .)
    CONDITIONAL1    reduce using rule 3 (statement_list -> statement .)
    LOOP            reduce using rule 3 (statement_list -> statement .)
    COMMENT         reduce using rule 3 (statement_list -> statement .)
    MINUS_OP        reduce using rule 3 (statement_list -> statement .)
    LOGICAL_OP_NOT  reduce using rule 3 (statement_list -> statement .)
    NUMBER_INTEGER  reduce using rule 3 (statement_list -> statement .)
    NUMBER_FLOAT    reduce using rule 3 (statement_list -> statement .)
    TRUE            reduce using rule 3 (statement_list -> statement .)
    FALSE           reduce using rule 3 (statement_list -> statement .)
    NULL            reduce using rule 3 (statement_list -> statement .)
    TEXT_CHAR       reduce using rule 3 (statement_list -> statement .)
    TEXT_STRING     reduce using rule 3 (statement_list -> statement .)
    TYPE_INTEGER    reduce using rule 3 (statement_list -> statement .)
    TYPE_FLOAT      reduce using rule 3 (statement_list -> statement .)
    TYPE_BOOLEAN    reduce using rule 3 (statement_list -> statement .)
    TYPE_CHAR       reduce using rule 3 (statement_list -> statement .)
    TYPE_STRING     reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    UNTIL           reduce using rule 3 (statement_list -> statement .)
    CONDITIONAL2    reduce using rule 3 (statement_list -> statement .)
    END_LINE        reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> expression . END_LINE
    (18) binary_expression -> expression . PLUS_OP expression
    (19) binary_expression -> expression . MINUS_OP expression
    (20) binary_expression -> expression . MUL_OP expression
    (21) binary_expression -> expression . DIV_OP expression
    (22) binary_expression -> expression . LESS_OP expression
    (23) binary_expression -> expression . GREATER_OP expression
    (24) binary_expression -> expression . LESS_EQUAL_OP expression
    (25) binary_expression -> expression . GREATER_EQUAL_OP expression
    (26) binary_expression -> expression . EQUAL_OP expression
    (27) binary_expression -> expression . DIFFERENT_OP expression
    (28) binary_expression -> expression . LOGICAL_OP_AND expression
    (29) binary_expression -> expression . LOGICAL_OP_OR expression

    END_LINE        shift and go to state 36
    PLUS_OP         shift and go to state 37
    MINUS_OP        shift and go to state 38
    MUL_OP          shift and go to state 39
    DIV_OP          shift and go to state 40
    LESS_OP         shift and go to state 41
    GREATER_OP      shift and go to state 42
    LESS_EQUAL_OP   shift and go to state 43
    GREATER_EQUAL_OP shift and go to state 44
    EQUAL_OP        shift and go to state 45
    DIFFERENT_OP    shift and go to state 46
    LOGICAL_OP_AND  shift and go to state 47
    LOGICAL_OP_OR   shift and go to state 48


state 5

    (5) statement -> assignment . END_LINE

    END_LINE        shift and go to state 49


state 6

    (6) statement -> declaration . END_LINE

    END_LINE        shift and go to state 50


state 7

    (7) statement -> print_statement . END_LINE

    END_LINE        shift and go to state 51


state 8

    (8) statement -> conditional . END_LINE

    END_LINE        shift and go to state 52


state 9

    (9) statement -> loop . END_LINE

    END_LINE        shift and go to state 53


state 10

    (10) statement -> comment .

    error           reduce using rule 10 (statement -> comment .)
    VARIABLE        reduce using rule 10 (statement -> comment .)
    PRINT_DECLARATION reduce using rule 10 (statement -> comment .)
    CONDITIONAL1    reduce using rule 10 (statement -> comment .)
    LOOP            reduce using rule 10 (statement -> comment .)
    COMMENT         reduce using rule 10 (statement -> comment .)
    MINUS_OP        reduce using rule 10 (statement -> comment .)
    LOGICAL_OP_NOT  reduce using rule 10 (statement -> comment .)
    NUMBER_INTEGER  reduce using rule 10 (statement -> comment .)
    NUMBER_FLOAT    reduce using rule 10 (statement -> comment .)
    TRUE            reduce using rule 10 (statement -> comment .)
    FALSE           reduce using rule 10 (statement -> comment .)
    NULL            reduce using rule 10 (statement -> comment .)
    TEXT_CHAR       reduce using rule 10 (statement -> comment .)
    TEXT_STRING     reduce using rule 10 (statement -> comment .)
    TYPE_INTEGER    reduce using rule 10 (statement -> comment .)
    TYPE_FLOAT      reduce using rule 10 (statement -> comment .)
    TYPE_BOOLEAN    reduce using rule 10 (statement -> comment .)
    TYPE_CHAR       reduce using rule 10 (statement -> comment .)
    TYPE_STRING     reduce using rule 10 (statement -> comment .)
    $end            reduce using rule 10 (statement -> comment .)
    UNTIL           reduce using rule 10 (statement -> comment .)
    CONDITIONAL2    reduce using rule 10 (statement -> comment .)
    END_LINE        reduce using rule 10 (statement -> comment .)


state 11

    (11) statement -> error .

    error           reduce using rule 11 (statement -> error .)
    VARIABLE        reduce using rule 11 (statement -> error .)
    PRINT_DECLARATION reduce using rule 11 (statement -> error .)
    CONDITIONAL1    reduce using rule 11 (statement -> error .)
    LOOP            reduce using rule 11 (statement -> error .)
    COMMENT         reduce using rule 11 (statement -> error .)
    MINUS_OP        reduce using rule 11 (statement -> error .)
    LOGICAL_OP_NOT  reduce using rule 11 (statement -> error .)
    NUMBER_INTEGER  reduce using rule 11 (statement -> error .)
    NUMBER_FLOAT    reduce using rule 11 (statement -> error .)
    TRUE            reduce using rule 11 (statement -> error .)
    FALSE           reduce using rule 11 (statement -> error .)
    NULL            reduce using rule 11 (statement -> error .)
    TEXT_CHAR       reduce using rule 11 (statement -> error .)
    TEXT_STRING     reduce using rule 11 (statement -> error .)
    TYPE_INTEGER    reduce using rule 11 (statement -> error .)
    TYPE_FLOAT      reduce using rule 11 (statement -> error .)
    TYPE_BOOLEAN    reduce using rule 11 (statement -> error .)
    TYPE_CHAR       reduce using rule 11 (statement -> error .)
    TYPE_STRING     reduce using rule 11 (statement -> error .)
    $end            reduce using rule 11 (statement -> error .)
    UNTIL           reduce using rule 11 (statement -> error .)
    CONDITIONAL2    reduce using rule 11 (statement -> error .)
    END_LINE        reduce using rule 11 (statement -> error .)


state 12

    (15) expression -> binary_expression .

    END_LINE        reduce using rule 15 (expression -> binary_expression .)
    PLUS_OP         reduce using rule 15 (expression -> binary_expression .)
    MINUS_OP        reduce using rule 15 (expression -> binary_expression .)
    MUL_OP          reduce using rule 15 (expression -> binary_expression .)
    DIV_OP          reduce using rule 15 (expression -> binary_expression .)
    LESS_OP         reduce using rule 15 (expression -> binary_expression .)
    GREATER_OP      reduce using rule 15 (expression -> binary_expression .)
    LESS_EQUAL_OP   reduce using rule 15 (expression -> binary_expression .)
    GREATER_EQUAL_OP reduce using rule 15 (expression -> binary_expression .)
    EQUAL_OP        reduce using rule 15 (expression -> binary_expression .)
    DIFFERENT_OP    reduce using rule 15 (expression -> binary_expression .)
    LOGICAL_OP_AND  reduce using rule 15 (expression -> binary_expression .)
    LOGICAL_OP_OR   reduce using rule 15 (expression -> binary_expression .)
    RPAREN          reduce using rule 15 (expression -> binary_expression .)


state 13

    (16) expression -> unitary_expression .

    END_LINE        reduce using rule 16 (expression -> unitary_expression .)
    PLUS_OP         reduce using rule 16 (expression -> unitary_expression .)
    MINUS_OP        reduce using rule 16 (expression -> unitary_expression .)
    MUL_OP          reduce using rule 16 (expression -> unitary_expression .)
    DIV_OP          reduce using rule 16 (expression -> unitary_expression .)
    LESS_OP         reduce using rule 16 (expression -> unitary_expression .)
    GREATER_OP      reduce using rule 16 (expression -> unitary_expression .)
    LESS_EQUAL_OP   reduce using rule 16 (expression -> unitary_expression .)
    GREATER_EQUAL_OP reduce using rule 16 (expression -> unitary_expression .)
    EQUAL_OP        reduce using rule 16 (expression -> unitary_expression .)
    DIFFERENT_OP    reduce using rule 16 (expression -> unitary_expression .)
    LOGICAL_OP_AND  reduce using rule 16 (expression -> unitary_expression .)
    LOGICAL_OP_OR   reduce using rule 16 (expression -> unitary_expression .)
    RPAREN          reduce using rule 16 (expression -> unitary_expression .)


state 14

    (17) expression -> primary_expression .

    END_LINE        reduce using rule 17 (expression -> primary_expression .)
    PLUS_OP         reduce using rule 17 (expression -> primary_expression .)
    MINUS_OP        reduce using rule 17 (expression -> primary_expression .)
    MUL_OP          reduce using rule 17 (expression -> primary_expression .)
    DIV_OP          reduce using rule 17 (expression -> primary_expression .)
    LESS_OP         reduce using rule 17 (expression -> primary_expression .)
    GREATER_OP      reduce using rule 17 (expression -> primary_expression .)
    LESS_EQUAL_OP   reduce using rule 17 (expression -> primary_expression .)
    GREATER_EQUAL_OP reduce using rule 17 (expression -> primary_expression .)
    EQUAL_OP        reduce using rule 17 (expression -> primary_expression .)
    DIFFERENT_OP    reduce using rule 17 (expression -> primary_expression .)
    LOGICAL_OP_AND  reduce using rule 17 (expression -> primary_expression .)
    LOGICAL_OP_OR   reduce using rule 17 (expression -> primary_expression .)
    RPAREN          reduce using rule 17 (expression -> primary_expression .)


state 15

    (12) assignment -> VARIABLE . ASSIGNMENT_OP expression
    (32) primary_expression -> VARIABLE .

    ASSIGNMENT_OP   shift and go to state 54
    END_LINE        reduce using rule 32 (primary_expression -> VARIABLE .)
    PLUS_OP         reduce using rule 32 (primary_expression -> VARIABLE .)
    MINUS_OP        reduce using rule 32 (primary_expression -> VARIABLE .)
    MUL_OP          reduce using rule 32 (primary_expression -> VARIABLE .)
    DIV_OP          reduce using rule 32 (primary_expression -> VARIABLE .)
    LESS_OP         reduce using rule 32 (primary_expression -> VARIABLE .)
    GREATER_OP      reduce using rule 32 (primary_expression -> VARIABLE .)
    LESS_EQUAL_OP   reduce using rule 32 (primary_expression -> VARIABLE .)
    GREATER_EQUAL_OP reduce using rule 32 (primary_expression -> VARIABLE .)
    EQUAL_OP        reduce using rule 32 (primary_expression -> VARIABLE .)
    DIFFERENT_OP    reduce using rule 32 (primary_expression -> VARIABLE .)
    LOGICAL_OP_AND  reduce using rule 32 (primary_expression -> VARIABLE .)
    LOGICAL_OP_OR   reduce using rule 32 (primary_expression -> VARIABLE .)


state 16

    (13) declaration -> type . VARIABLE ASSIGNMENT_OP expression
    (14) declaration -> type . VARIABLE

    VARIABLE        shift and go to state 55


state 17

    (40) print_statement -> PRINT_DECLARATION . LPAREN expression RPAREN

    LPAREN          shift and go to state 56


state 18

    (48) conditional -> CONDITIONAL1 . LPAREN expression RPAREN STRUCTURE_BODY statement_list CONDITIONAL2 STRUCTURE_BODY statement_list
    (49) conditional -> CONDITIONAL1 . LPAREN expression RPAREN STRUCTURE_BODY statement_list

    LPAREN          shift and go to state 57


state 19

    (50) loop -> LOOP . STRUCTURE_BODY statement_list UNTIL LPAREN expression RPAREN

    STRUCTURE_BODY  shift and go to state 58


state 20

    (41) comment -> COMMENT .
